@@ -2,6 +2,6 @@ include $(top_srcdir)/common.mk
 
 supportdir = $(guilegwmoduledir)/support
 support_DATA = g-wrap.scm defs.scm gobject.scm modules.scm \
-	slib.scm genwrite.scm printf.scm glob.scm
+	slib.scm genwrite.scm printf.scm glob.scm gtk-doc.scm
 
 EXTRA_DIST = $(support_DATA)
